--- a/src/app/stadionfest/stadionfest.component.html
+++ b/src/app/stadionfest/stadionfest.component.html
@@ -23,7 +23,7 @@
 
         <p class="normal">
           🎫 bei allen Spielern und bei den Heimspielen des HV TDP Stainz<br />
-          🎫 Per E-Mail an <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz@gmx.at</a> (kostenloser
+          🎫 Per E-Mail an <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz&#64;gmx.at</a> (kostenloser
           Postversand ab 2 Tickets)<br />
           🎫 oeticket
           <!-- 💵 12 Euro (Vorverkauf)<br> -->
